# catalogue-tools

./: .catem.json  .catl-convert.local.json.example  .clang-format  .clang-tidy  .cmake-format.py  .dockerignore  .gcloudignore  .gitattributes  .gitignore  .local.cmake  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Dockerfile.hbb  Logger.cpp  README.md  build-hbb.sh  catl-decomp.cpp  catl-hasher-2.cpp  catl-hasher-logging.cpp  catl-hasher-old.cpp  catl-hasher.cpp  catl-validator.cpp  conan.sh  conanfile.py  conanfile.txt  core-types.cpp  core-types.h  format.sh  log-macros.h  logger.cpp  makefile  proof.json  repack.sh  shamap.cpp  shamap.h  test-compressed.catl  test-compression.sh  tsan_suppressions.txt  utils.cpp  (+2 more)
cmake/: iwyu.imp  (+5 more)
scripts/: .gitignore  add-strand-guard.py  audit-definitions.py  build-hbb.sh  build-xprv.sh  catenv.sh  catl-convert.py  conan.sh  cout-to-logi-verbose.py  cout-to-logi.py  decode-xrpl-binary.js  docker-context-preview.py  find_camel_case.py  format.py  format.sh  generate-definitions.py  generate-known-fields.py  get-changed-files.py  git-blame-diff  iwyu.py  log-filter.py  log-gaps.py  peer-remote-lldb.sh  prove-blast.py  pyproject.toml  rename-xproof-to-xprv.sh  requirements.txt  run-nudbview-e2e.sh  run-nudbview-stress.sh  run-nudbview-tests.sh  setup-catenv.sh  setup-venv.sh  test-catl1-catl2.sh  test-catl1-nudb.sh  test-decomp.sh  test-hasher.sh  test-keyfile-stats.sh  test-nudb-index-slice.sh  test-peer.sh  test-slicer.sh  (+12 more)
src/catalogue-common/: CMakeLists.txt
src/catalogue-common/src/: catalogue-common.cpp  ledger-header-view.cpp  ledger-info.cpp  sha512-hasher.cpp  utils.cpp
src/catalogue-v1/: CMakeLists.txt
src/catalogue-v1/src/: catl-v1-errors.cpp  catl-v1-ledger-info-view.cpp  catl-v1-mmap-reader.cpp  catl-v1-reader-shamap.cpp  catl-v1-reader.cpp  catl-v1-sha512.cpp  catl-v1-simple-state-map.cpp  catl-v1-utils.cpp  catl-v1-writer.cpp  ledger-info-v1-view.cpp
src/catalogue-v2/: CMakeLists.txt  shamap-serialized.cpp
src/core/: CMakeLists.txt
src/core/src/: base64.cpp  logger.cpp  types.cpp
src/crypto/: CMakeLists.txt
src/crypto/src/: sha512-half-hasher.cpp  sha512-hasher.cpp  sig-verify.cpp
src/cuckoofilter/: CMakeLists.txt
src/cuckoofilter/src/: hashutil.cc
src/experiments/: CMakeLists.txt
src/experiments/includes/: shamap-custom-traits.h
src/experiments/src/: ai-dev-log.md  catl1-to-catl2.cpp  catl1-to-zstd-dict.cpp  design-doc.md  hybrid-shamap-exp.cpp  hybrid-shamap-exp.cpp.bak  hybrid-shamap-hash.cpp  serialized-inners.cpp  zstd-experiments-custom-dict.cpp  (+2 more)
src/hasher/: CMakeLists.txt
src/hybrid-shamap-v2/: CMakeLists.txt
src/lesser-peer/: CMakeLists.txt
src/nodestore/: CMakeLists.txt
src/nudbview/: CMakeLists.txt  keyfile-stats-dashboard.cpp  nudb-code-map.md
src/peer-client/: CMakeLists.txt
src/rpc-client/: CMakeLists.txt
src/shamap/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils-v1/: CMakeLists.txt
src/utils-v2/: CMakeLists.txt
src/vl-client/: CMakeLists.txt
src/x-data/: CMakeLists.txt  ai-dev-log.md
src/xdata-json/: CMakeLists.txt  README.md
src/xproof/: CMakeLists.txt  shamap-abbreviated.cpp
src/xprv/: CMakeLists.txt  shamap-abbreviated.h
tests/: CMakeLists.txt  fixtures-scribble-gtest.cpp  fixtures-scribble-test.cpp  main-gtest.cpp  shamap-collapsed-gtest.cpp  shamap-test.cpp  shamap-with-main-gtest.cpp  test-utils.cpp  test-utils.h  utils-gtest.cpp
tests/base58/: CMakeLists.txt  base58-gtest.cpp
tests/catalogue-common/: CMakeLists.txt  sha512-hasher-gtest.cpp
tests/catalogue-v1/: CMakeLists.txt  catalogue-v1-test.cpp  reader-shamap-gtest.cpp  sha512hasher-gtest.cpp  simple-state-map-gtest.cpp  writer-gtest.cpp  writer-test.cpp
tests/core/: CMakeLists.txt  bit-utils-gtest.cpp
tests/crypto/: CMakeLists.txt  sha512-half-hasher-gtest.cpp  sha512-hasher-gtest.cpp
tests/cuckoofilter/: CMakeLists.txt  cuckoofilter-gtest.cpp
tests/fixture/: ledger-29952-txns.json  op-adds.json  paste.txt
tests/hybrid-shamap-v2/: CMakeLists.txt  hybrid-map-operations-gtest.cpp  hybrid-shamap-test-helpers.cpp  hybrid-shamap-test-helpers.h  hybrid-shamap-v2-basic-gtest.cpp  item-creation-gtest.cpp
tests/lesser-peer/: CMakeLists.txt  peer-manager-gtest.cpp
tests/nodestore/: CMakeLists.txt  compression-types-gtest.cpp  inner-node-format-gtest.cpp  lz4-codec-gtest.cpp  node-blob-gtest.cpp  node-types-gtest.cpp  nodeobject-codec-gtest.cpp  nudb-bulk-duplicates-gtest.cpp  varint-gtest.cpp
tests/nudbview/: CMakeLists.txt  nudbview-gtest.cpp  slice-e2e-gtest.cpp  slice-spill-gtest.cpp  slice-stress-gtest.cpp  spill-record-gtest.cpp  test-helpers.hpp
tests/peer-client/: CMakeLists.txt  inbound-budget-gtest.cpp  node-cache-signal-gtest.cpp  node-credentials-gtest.cpp  peer-client-gtest.cpp  peer-endpoint-cache-gtest.cpp  peer-selector-gtest.cpp  peer-session-interface-gtest.cpp  peer-set-pruning-gtest.cpp  peer-set-test-access.h  session-signature-gtest.cpp  tree-walk-state-gtest.cpp
tests/shamap/: CMakeLists.txt  binary-trie-gtest.cpp  fixtures-scribble-gtest.cpp  shamap-abbreviated-gtest.cpp  shamap-collapsed-gtest.cpp  shamap-cow-concurrency-gtest.cpp  shamap-cow-versioning-gtest.cpp  shamap-diff-gtest.cpp  shamap-gtest.cpp  shamap-snapshot-lifecycle-gtest.cpp  shamap-test-utils.cpp  shamap-test-utils.h  utils-gtest.cpp
tests/shamap-header-only/: CMakeLists.txt  shamap-custom-traits.h  shamap-header-only-gtest.cpp  shamap-header-only-test.cpp
tests/test-utils/: CMakeLists.txt  test-helpers.h
tests/utils/: test-utils.cpp  test-utils.h
tests/x-data/: CMakeLists.txt  codecs-gtest.cpp  generate-codec-fixtures.py  known-fields-gtest.cpp  optional-visitor-gtest.cpp  xdata-gtest.cpp
tests/xdata-json/: CMakeLists.txt  xdata-json-gtest.cpp
tests/xproof/: CMakeLists.txt  proof-chain-binary-gtest.cpp  skip-list-gtest.cpp
tests/xprv/: CMakeLists.txt  node-identity-resolver-gtest.cpp  peer-json-gtest.cpp  proof-chain-binary-gtest.cpp  skip-list-gtest.cpp  static-path-gtest.cpp  validation-buffer-gtest.cpp  validation-collector-gtest.cpp  validation-signature-gtest.cpp
(+578 files in other folders)
