[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "catalogue-tools-scripts"
version = "0.1.0"
description = "Scripts for catalogue-tools; dependencies managed via pyproject.toml"
dependencies = [
  "black==25.1.0",
  "certifi==2025.4.26",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cmakelang==0.6.13",
  "colorama==0.4.6",
  "conan==2.15.1",
  "fasteners==0.19",
  "idna==3.10",
  "Jinja2==3.1.6",
  "MarkupSafe==3.0.2",
  "mypy_extensions==1.1.0",
  "packaging==25.0",
  "patch-ng==1.18.1",
  "pathspec==0.12.1",
  "platformdirs==4.3.7",
  "pynput==1.8.1",
  "pyobjc==11.0; sys_platform == 'darwin'",
  "python-dateutil==2.9.0.post0",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "six==1.17.0",
  "urllib3==2.0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["catalogue_tools_scripts"]

[project.optional-dependencies]
pyobjc = [
  "pyobjc==11.0; sys_platform == 'darwin'",
  "pyobjc-core==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Accessibility==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Accounts==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AddressBook==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AdServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AdSupport==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AppleScriptKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AppleScriptObjC==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ApplicationServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AppTrackingTransparency==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AudioVideoBridging==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AuthenticationServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AutomaticAssessmentConfiguration==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Automator==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AVFoundation==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AVKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-AVRouting==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-BackgroundAssets==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-BrowserEngineKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-BusinessChat==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CalendarStore==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CallKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Carbon==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CFNetwork==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Cinematic==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ClassKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CloudKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Collaboration==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ColorSync==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Contacts==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ContactsUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreAudio==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreAudioKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreBluetooth==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreData==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreHaptics==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreLocation==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreMedia==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreMediaIO==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreMIDI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreML==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreMotion==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreSpotlight==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreText==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CoreWLAN==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-CryptoTokenKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DataDetection==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DeviceCheck==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DeviceDiscoveryExtension==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DictionaryServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DiscRecording==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DiscRecordingUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DiskArbitration==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-DVDPlayback==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-EventKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ExceptionHandling==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ExecutionPolicy==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ExtensionKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ExternalAccessory==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-FileProvider==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-FileProviderUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-FinderSync==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-FSEvents==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-GameCenter==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-GameController==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-GameKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-GameplayKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-HealthKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ImageCaptureCore==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-InputMethodKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-InstallerPlugins==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-InstantMessage==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Intents==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-IntentsUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-IOBluetooth==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-IOBluetoothUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-IOSurface==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-iTunesLibrary==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-KernelManagement==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-LatentSemanticMapping==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-LaunchServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-libdispatch==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-libxpc==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-LinkPresentation==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-LocalAuthentication==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-LocalAuthenticationEmbeddedUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MailKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MapKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MediaAccessibility==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MediaExtension==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MediaLibrary==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MediaPlayer==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MediaToolbox==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Metal==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MetalFX==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MetalKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MetalPerformanceShaders==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MetalPerformanceShadersGraph==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MetricKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MLCompute==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ModelIO==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-MultipeerConnectivity==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-NaturalLanguage==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-NetFS==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Network==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-NetworkExtension==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-NotificationCenter==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-OpenDirectory==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-OSAKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-OSLog==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-PassKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-PencilKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-PHASE==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Photos==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-PhotosUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-PreferencePanes==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-PushKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-QuickLookThumbnailing==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ReplayKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SafariServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SafetyKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SceneKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ScreenCaptureKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ScreenSaver==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ScreenTime==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ScriptingBridge==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SearchKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Security==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SecurityFoundation==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SecurityInterface==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SensitiveContentAnalysis==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ServiceManagement==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SharedWithYou==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SharedWithYouCore==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ShazamKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Social==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SoundAnalysis==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Speech==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SpriteKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-StoreKit==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Symbols==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SyncServices==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SystemConfiguration==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-SystemExtensions==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-ThreadNetwork==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-UniformTypeIdentifiers==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-UserNotifications==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-UserNotificationsUI==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-VideoSubscriberAccount==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-VideoToolbox==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Virtualization==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-Vision==11.0; sys_platform == 'darwin'",
  "pyobjc-framework-WebKit==11.0; sys_platform == 'darwin'",
]
